@@ -2,11 +2,13 @@ package me.jejunu.opensource_supporter.service;
 
 import lombok.RequiredArgsConstructor;
 import me.jejunu.opensource_supporter.domain.User;
+import me.jejunu.opensource_supporter.dto.PagedRankResponseDto;
 import me.jejunu.opensource_supporter.dto.RankingMyInfoRequestDto;
 import me.jejunu.opensource_supporter.dto.RankingUserInfoRequestDto;
 import me.jejunu.opensource_supporter.repository.UserRepository;
 import org.json.JSONObject;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
@@ -21,24 +23,30 @@ public class RankingService {
     private final UserRepository userRepository;
     private final GithubApiService githubApiService;
 
-    @Cacheable(cacheNames = "rank")
+    @Cacheable(cacheNames = "pageRank")
+    public Page<User> getRankedUsers(Pageable pageable) {
+        return userRepository.findAllByOrderByUsedPointDesc(pageable);
+    }
+    @Cacheable(cacheNames = "listRank")
     public List<User> getRankedUsers() {
         return userRepository.findAllByOrderByUsedPointDesc();
     }
 
-
-    public List<RankingUserInfoRequestDto> getUserRankingList(Pageable pageable) {
-        List<User> rankedUsers = getRankedUsers();
+    public PagedRankResponseDto getUserRankingList(Pageable pageable) {
+        Page<User> rankedUsers = getRankedUsers(pageable);
         AtomicInteger startRank = new AtomicInteger((int) pageable.getOffset() + 1);
-
-        return rankedUsers.stream()
+        List<RankingUserInfoRequestDto> rankingUserInfoRequestDtoList = rankedUsers.stream()
                 .map(user -> RankingUserInfoRequestDto.builder()
                         .rank(startRank.getAndIncrement())
                         .userName(user.getUserName())
                         .customName(user.getCustomName())
+                        .avatarUrl(user.getAvatarUrl())
                         .usedPoint(user.getUsedPoint())
-                        .build())
-                .collect(Collectors.toList());
+                        .build()).toList();
+        return PagedRankResponseDto.builder()
+                .hasNextPage(rankedUsers.hasNext())
+                .data(rankingUserInfoRequestDtoList)
+                .build();
     }
 
     public RankingMyInfoRequestDto getMyRanking(String authHeader) {
@@ -54,11 +62,11 @@ public class RankingService {
         // Find the rank of the user and calculate the top percent
         int userRank = rankedUsers.stream()
                 .map(User::getUserName)
-                .collect(Collectors.toList())
+                .toList()
                 .indexOf(userName) + 1;
 
         if (userRank == 0) {
-            throw new IllegalArgumentException("User not found");
+            throw new IllegalArgumentException("not found user rank");
         }
 
         double topPercent = ((double) userRank / totalUsers) * 100;
@@ -67,6 +75,7 @@ public class RankingService {
                 .rank(userRank)
                 .userName(user.getUserName())
                 .customName(user.getCustomName())
+                .avatarUrl(user.getAvatarUrl())
                 .usedPoint(user.getUsedPoint())
                 .topPercent(topPercent)
                 .build();
