@@ -64,18 +64,21 @@ public class RepoItemService {
     }
 
     @Transactional(readOnly = true)
-    public List<RecommendedRepoCardDto> getMyPartners(String authHeader, Pageable pageable) {
+    public PagedRepoItemResponseDto getMyPartners(String authHeader, Pageable pageable) {
         String userToken = authHeader.replace("Bearer ", "");
         JSONObject userDataResponse = githubApiService.getUserFromGithub(userToken);
         String userName = userDataResponse.getString("login");
         User user = userRepository.findByUserName(userName)
                 .orElseThrow(() -> new IllegalArgumentException("not found user"));
         Page<RepoItem> repoItemsPage = supportedPointRepository.findDistinctRepoItemsByUser(user, pageable);
-
-        return repoItemsPage.stream()
-                .map(this::convertToDto)
+        List<RecommendedRepoCardDto> repoCardDtoList = repoItemsPage.stream()
+                .map(this::convertToCardDto)
                 .sorted(Comparator.comparing(RecommendedRepoCardDto::getLastCommitAt).reversed())
-                .collect(Collectors.toList());
+                .toList();
+        return PagedRepoItemResponseDto.builder()
+                .hasNextPage(repoItemsPage.hasNext())
+                .data(repoCardDtoList)
+                .build();
     }
 
     @Transactional
@@ -220,23 +223,31 @@ public class RepoItemService {
     }
 
     @Cacheable(cacheNames = "recentlyCommitRepoCache")
-    public List<RecommendedRepoCardDto> updateRecentlyCommitRepo(Pageable pageable) {
+    public PagedRepoItemResponseDto updateRecentlyCommitRepo(Pageable pageable) {
         Page<RepoItem> repoItemsPage = repoItemRepository.findAllByOrderByLastCommitAtDesc(pageable);
-        return repoItemsPage.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+        List<RecommendedRepoCardDto> repoCardDtoList = repoItemsPage.stream()
+                .map(this::convertToCardDto)
+                .toList();
+        return PagedRepoItemResponseDto.builder()
+                .hasNextPage(repoItemsPage.hasNext())
+                .data(repoCardDtoList)
+                .build();
     }
 
     @Cacheable(cacheNames = "mostViewedRepoCache")
-    public List<RecommendedRepoCardDto> updateMostViewed(Pageable pageable) {
+    public PagedRepoItemResponseDto updateMostViewed(Pageable pageable) {
         Page<RepoItem> repoItemsPage = repoItemRepository.findAllByOrderByViewCountDesc(pageable);
-        return repoItemsPage.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+        List<RecommendedRepoCardDto> repoCardDtoList = repoItemsPage.stream()
+                .map(this::convertToCardDto)
+                .toList();
+        return PagedRepoItemResponseDto.builder()
+                .hasNextPage(repoItemsPage.hasNext())
+                .data(repoCardDtoList)
+                .build();
     }
 
 
-    private RecommendedRepoCardDto convertToDto(RepoItem repoItem) {
+    private RecommendedRepoCardDto convertToCardDto(RepoItem repoItem) {
         User user = repoItem.getUser();
         return RecommendedRepoCardDto.builder()
                 .id(repoItem.getId())
